css/map.css
html,
body {
  height: 100%;
  margin:0;
  padding:0;
  width: 100%;
}

.c-map-header {
    border-bottom: 2px solid #f9f9f9;
    background-color: #0f3d4c;
    height: 5rem;
}

.c-map-header__title {
    color: #fdfdfd;
    font-size: 2rem;
    margin: 1.25rem;
    width: 100%;
}

.c-map-container {
  position: relative;

}

.map {
    height: calc(100vh - 8.5rem);
}


.footer {
  bottom: 0;
  border-top: 2px solid #f9f9f9;
  background-color: #fff;
  min-height: 3.5rem;
  position: fixed;
  padding: 0;
  width: 100%;
}
.panel {
  display: none;
}
.bar {
  background-color: #0f3d4c;
  line-height: 1.5;
  padding: .25em;
  text-align: center;
}
.bar a {
  display: block;
  height: 100%;
  color: #fff;
  text-decoration: none;
}



.c-btn-group {
    margin: 0;
    padding: 0;
}

.c-btn {
    margin: 0;
    padding: 0;
}


.gm-style-iw {
    padding: .5em;
    width: 200px !important;
    height: 90px !important;
}

.gm-style-iw p {
  margin: 0;
}



.control-ui{
  background-color:#fff;
  cursor: pointer;
  height: 2.5em;
  margin-top: .5em;
  margin-right: .5em;
  text-align: center;
  user-select: none;
  width: 4em;
}
.control-text{
  font-size: 12px;
  padding: .5em 0 .5em 0;
  user-select: none;
}

.c-btn--selectable__label {
  background-color: #0f3d4c;
  border-bottom: 1px solid #26505d;
  border-right: 1px solid #26505d;
  color: #fff;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  margin: 0;
  padding: .25rem 0;
  text-align: center;
  transition: 0s;
  user-select: none;
}

.c-btn--selectable__label:last-of-type {
  border-right: 0;
}

.c-btn--selectable__label,
.c-btn--selectable__label:first-of-type,
.c-btn--selectable__label:last-of-type {
  border-radius: 0px;
}


@media (min-width:768px) {
  .panel {
      display: block;
  }

  .bar {
      display: none;
  }



  .c-form {
      position: relative;
      left: 0;
      top: 1.25rem;
      padding: 0;
  }

  .c-main-header__logo {
      margin-left: 0;
      margin-right: 0;
      float: right;
      padding: 0.5em 1em;
      width: 180px;
  }

  .control-ui {
    width: 8em;
  }

}


/* SNAZZY INFO BOX CHANGES */
.si-content :last-child {
  margin-bottom:0;
}

.si-content-more-link,
.si-content-more-link:visited {
  color: #e4b53c;
  cursor: pointer;
  text-decoration: none;
}
.si-content-more-link:hover {
  text-decoration: underline;
}


/* == ADD TO BASE.SCSS ====================================================== */

input[type=search] {
  box-sizing: border-box;
}

/* ========================================================================== */

/* == ADD TO AUTOCOMPLETE.SCSS ============================================== */
.c-autocomplete {
  position:absolute;
  left:0;
  top:100%;
  z-index:99;
  width:100%;
}
.c-autocomplete__list {
  list-style:none;
  margin:0;
  padding:0;
}
.c-autocomplete__item {
  margin:0;
}
.c-autocomplete__item:nth-of-type(even) .c-autocomplete__link{
  background:#eee;
}
.c-autocomplete__link {
  display:block;
  line-height: 1.1;
  padding: 0.5em 20px 0.3em;
  border-left:1px solid #ccc;
  border-right:1px solid #ccc;
  border-bottom:1px solid #ccc;
  background-color:#fff;
  text-decoration:none;
}
.c-autocomplete__item .c-autocomplete__link:hover {
  background-color:#ccc;
}
.c-autocomplete__item.is-selected .c-autocomplete__link {
  background-color:#333;
  color:#f9f9f9
}
.c-autocomplete__item.is-selected .c-autocomplete__link:hover {
  background-color:#444;
}
.c-autocomplete__subtitle {
  color:#999;
  display:block;
}
.c-autocomplete__item.is-selected .c-autocomplete__subtitle {
  color:#ddd;
}

/* ========================================================================== */

.infoPanel {
  background-color: rgba(15,61,76,0.9);
  border-right: 1px solid #eee;
  color: #fff;
  display: none;
  height: calc(100vh - 8.5rem);
  padding: 1em 2em;
  width: 0%;
  position: absolute;
  left: 0;
  top: 5rem;
  z-index: 2;
}
.infoPanel.is-open {
  width:25%;
  display:block;
}

.infoPanel__content a,
.infoPanel__content a:visited {
  color: #e4b53c;
  cursor: pointer;
  text-decoration: none;
}
.infoPanel__content a:hover {
  text-decoration: underline;
}

@media (min-width: 768px) and (max-width: 1199px) {
  .infoPanel.is-open {
    width:40%;
    display:block;
  }
  .infoPanel {
    min-height: calc(100vh - 8.125rem);
  }
  .c-map-header {
      height: 6rem;
  }

  .map {
      height: calc(100vh - 9.5rem);
  }
  .c-map-header {
      padding: .5rem 1rem;
  }

  .c-form {
      margin: .25rem;
  }

 }

@media (min-width: 768px) and (orientation: portrait) {
    .map {
        height: calc(100vh - 11rem);
    }
}

@media (min-width: 1024px) and (orientation: portrait) {
    .map {
        height: calc(100vh - 9.5rem);
    }
}

@media (max-width: 767px) {
  .infoPanel {
    border-right: 0;
    position: absolute;
    top:5em;
    min-height: calc(100vh - 12rem);
    min-width: 100%;
  }

  .c-btn-group {
       display: flex;
       flex-wrap: wrap;
  }
  .c-btn--selectable__label {
      flex: 1 1 25%;
      font-size: .75rem;
      padding: 0;
  }
  .c-map-header {
      height: 4rem;
  }
.map {
    height: calc(100vh - 7.5rem);
}

  .c-form {
      padding: 0;
      margin-top: .5rem;
  }
  .c-main-header__logo {
      margin-top: .2rem;
  }

  .c-map-header {
      padding: .5rem 1rem;
  }

}


@media (max-width: 400px) {



  .c-form {
    padding: 0;
    margin-top: .5rem;
    margin-bottom: 0;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }

  .c-main-header__logo {
      margin-top: .45rem;
  }

  .c-form__input, input[type=text] {
    border: 0;
    -webkit-appearance: none !important;
    border-radius: 0 !important;
  }
  .c-form {
      border-top: 1px solid #eee;
  }
  .c-form__input--select:after, .fsSelectParent:after {
    height: 2.4em;
    line-height: 2.6;
  }

}

